--- a/src/sequence-recall.html
+++ b/src/sequence-recall.html
@@ -162,9 +162,9 @@
         }
 
         .btn {
-            background: #ff0000;
+            background: #00ffff;
             color: #0a0a0a;
-            border: 2px solid #ff0000;
+            border: 2px solid #00ffff;
             padding: 12px 30px;
             font-family: 'Courier Prime', monospace;
             font-size: 1em;
@@ -180,8 +180,8 @@
 
         .btn:hover {
             background: #0a0a0a;
-            color: #ff0000;
-            box-shadow: 0 0 15px #ff0000;
+            color: #00ffff;
+            box-shadow: 0 0 15px #00ffff;
         }
 
         .btn:active {
