--- a/src/sequence-recall.html
+++ b/src/sequence-recall.html
@@ -232,7 +232,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← HOME</a>
+    <a href="../index.html" class="home-link">←</a>
 
     <div class="game-container">
         <h1>SEQUENCE RECALL</h1>
