change sequence recall buttons to solid fill on press

--- a/src/sequence-recall.html
+++ b/src/sequence-recall.html
@@ -111,9 +111,7 @@
         }
 
         .color-button.lit {
-            filter: brightness(1.8);
-            box-shadow: 0 0 20px currentColor;
-            transform: scale(1.05);
+            transform: scale(1.02);
         }
 
         .color-button.disabled {
@@ -126,9 +124,19 @@
             border-color: #ff0000;
         }
 
+        .btn-red.lit {
+            background: #ff3333;
+            box-shadow: 0 0 30px #ff0000, inset 0 0 40px rgba(255, 100, 100, 0.6);
+        }
+
         .btn-blue {
             background: #00008b;
             border-color: #0000ff;
+        }
+
+        .btn-blue.lit {
+            background: #4444ff;
+            box-shadow: 0 0 30px #0000ff, inset 0 0 40px rgba(100, 100, 255, 0.6);
         }
 
         .btn-green {
@@ -136,9 +144,19 @@
             border-color: #00ff00;
         }
 
+        .btn-green.lit {
+            background: #33ff33;
+            box-shadow: 0 0 30px #00ff00, inset 0 0 40px rgba(100, 255, 100, 0.6);
+        }
+
         .btn-yellow {
             background: #8b8b00;
             border-color: #ffff00;
+        }
+
+        .btn-yellow.lit {
+            background: #ffff44;
+            box-shadow: 0 0 30px #ffff00, inset 0 0 40px rgba(255, 255, 100, 0.6);
         }
 
         .message {
