fix: sequence recall lit colors more distinct and saturated

--- a/src/sequence-recall.html
+++ b/src/sequence-recall.html
@@ -125,8 +125,8 @@
         }
 
         .btn-red.lit {
-            background: #ff3333;
-            box-shadow: 0 0 30px #ff0000, inset 0 0 40px rgba(255, 100, 100, 0.6);
+            background: #cc0000;
+            box-shadow: 0 0 25px #ff0000, inset 0 0 20px rgba(255, 0, 0, 0.4);
         }
 
         .btn-blue {
@@ -135,8 +135,8 @@
         }
 
         .btn-blue.lit {
-            background: #4444ff;
-            box-shadow: 0 0 30px #0000ff, inset 0 0 40px rgba(100, 100, 255, 0.6);
+            background: #0044cc;
+            box-shadow: 0 0 25px #0066ff, inset 0 0 20px rgba(0, 100, 255, 0.4);
         }
 
         .btn-green {
@@ -145,8 +145,8 @@
         }
 
         .btn-green.lit {
-            background: #33ff33;
-            box-shadow: 0 0 30px #00ff00, inset 0 0 40px rgba(100, 255, 100, 0.6);
+            background: #00aa00;
+            box-shadow: 0 0 25px #00ff00, inset 0 0 20px rgba(0, 255, 0, 0.4);
         }
 
         .btn-yellow {
@@ -155,8 +155,8 @@
         }
 
         .btn-yellow.lit {
-            background: #ffff44;
-            box-shadow: 0 0 30px #ffff00, inset 0 0 40px rgba(255, 255, 100, 0.6);
+            background: #ccaa00;
+            box-shadow: 0 0 25px #ffcc00, inset 0 0 20px rgba(255, 200, 0, 0.4);
         }
 
         .message {
